# eatsy-hs

./: .gitignore  CHANGELOG.md  README.md  client_session_key.aes  eatsy-hs.cabal  examples.sh  flake.nix  result
app/: Main.hs  Paths.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
load_db/: load_appusers.sh  load_posts.sh  load_user_rel.sh
neurelo/: eatsy.nsl  examples.sh
src/: Actions.hs  ConvertTypes.hs  Syskeys.hs  Utils.hs
src/Post/: Actions.hs  Types.hs
src/User/: Actions.hs  Types.hs
