cabal-version:      3.0
name:               eatsy-hs
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Rishikesh
maintainer:         kumarcrishikesh@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Actions
    other-modules: ConvertTypes
    -- other-extensions:
    build-depends:    base
                    , aeson ^>=2.2.1.0
                    , bytestring ^>=0.12.1.0
                    , text ^>=2.1.1
                    , http-client ^>=0.7.17
                    , http-conduit ^>=2.3.8.3
                    , scotty ^>=0.22
                    , time ^>=1.12
                    , wreq ^>=0.5.4.3
                    , lens ^>=5.2.3
                    , async ^>=2.2.5

    hs-source-dirs:   src
    default-language: Haskell2010

executable eatsy-hs
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base
                    , eatsy-hs
                    , aeson ^>=2.2.1.0
                    , bytestring ^>=0.12.1.0
                    , text ^>=2.1.1
                    , http-client ^>=0.7.17
                    , http-conduit ^>=2.3.8.3
                    , scotty ^>=0.22
                    , time ^>=1.12
                    , wreq ^>=0.5.4.3
                    , lens ^>=5.2.3
                    , async ^>=2.2.5

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite eatsy-hs-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.0,
        eatsy-hs
